<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/itemArticleImgImageView"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:background="@android:color/holo_green_light"
            android:id="@+id/itemArticleSourceTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/source"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/itemArticleImgImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemArticleTitleTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center|start"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/itemArticleAuthor"
            app:layout_constraintEnd_toEndOf="@+id/itemArticlePublishedDate"
            app:layout_constraintStart_toStartOf="@+id/itemArticleSourceTV"
            app:layout_constraintTop_toBottomOf="@+id/itemArticleSourceTV" />


        <TextView
            android:id="@+id/itemArticlePublishedDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/itemArticleSourceTV"
            app:layout_constraintTop_toTopOf="@+id/itemArticleSourceTV" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/itemArticleSourceTV" />


        <TextView
            android:id="@+id/itemArticleAuthor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/author"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            android:maxLines="1"
            android:ems="1"
            android:ellipsize="end"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/itemArticlePublishedTime"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/itemArticlePublishedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/itemArticlePublishedDate"
            app:layout_constraintTop_toTopOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>